ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Proposal_Payin_Validation_Config__c/TBM_Proposal_Payin_Validation_Config__c.object-meta.xml
<CustomObject>
    <label>TBM Proposal Payin Validation Config</label>
    <nameField>
        <label>TBM Proposal Payin Validation Config Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TBM Proposal Payin Validation Configs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>