ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Proposal_Payin_Validation_Config__c/fields/ExternalField__c.field-meta.xml
<CustomField>
    <fullName>ExternalField__c</fullName>
    <externalId>true</externalId>
    <label>ExternalField</label>
    <length>40</length>
    <type>Text</type>
</CustomField>