ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Proposal_Payin_Validation_Config__c/fields/Maker_Date__c.field-meta.xml
<CustomField>
    <fullName>Maker_Date__c</fullName>
    <label>Maker Date</label>
    <type>DateTime</type>
</CustomField>