ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Proposal_Payin_Validation_Config__c/fields/Max_RMC__c.field-meta.xml
<CustomField>
    <fullName>Max_RMC__c</fullName>
    <label>Max RMC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>