ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Proposal_Payin_Validation_Config__c/fields/Min_RCM__c.field-meta.xml
<CustomField>
    <fullName>Min_RCM__c</fullName>
    <label>Min RCM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>