ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Proposal_Payin_Validation_Config__c/fields/Segment_Code__c.field-meta.xml
<CustomField>
    <fullName>Segment_Code__c</fullName>
    <label>Segment Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>