ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Proposal_Payin_Validation_Config__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <label>Used</label>
    <length>2</length>
    <type>Text</type>
</CustomField>